--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,8 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+	<!-- inject:css -->
+	<!-- endinject -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
   </head>
