Add cartodb service to index.

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
 	<!-- endinject -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/cartoDBFactory.js"></script>
   </head>
 
   <body ng-app="starter">
