Add cartoDB.js to index.

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,9 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- CartoDB Scripts -->
+    <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
+
     <!-- your app's js -->
 	<!-- inject:css -->
 	<!-- endinject -->
