--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,16 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
+		
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
+		<script src = "plugins/cordova-sqlite-storage/www/SQLitePlugin.js";></script>
+		
     <!-- your app's js -->
-	<!-- inject:css -->
-	<!-- endinject -->
-    <script src="js/app.js"></script>
+		<!-- inject:css -->
+		<!-- endinject -->
+    
+		<script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
   </head>
 
