--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,8 @@
     <!-- your app's js -->
 		<!-- inject:css -->
 		<!-- endinject -->
-    
+		
+    <script src="js/global.js"></script>
 		<script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/mapController.js"></script>
