Added script tags for services.js and for all geojson data.

--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,20 @@
 	<!-- endinject -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+
+    <!-- Libraries -->
     <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.min.js"></script>
     <script src="lib/ti-segmented-control/dist/ti-segmented-control.js"></script>
+
+    <!-- Geojson Files -->
+    <script type="application/json" src="resources/otway_ski_trails.geojson"></script>
+    <script type="application/json" src="resources/otway_snowshoe_trails.geojson"></script>
+    <script type="application/json" src="resources/otway_singletrack_04082016_2.geojson"></script>
+    <script type="application/json" src="resources/otway_trail_places.geojson"></script>
+    <script type="application/json" src="resources/pidherny_mtb_places.geojson"></script>
+    <script type="application/json" src="resources/pidherny_08042016.geojson"></script>
+    <script type="application/json" src="resources/pidherny_rec_bdy.geojson"></script>
   </head>
 
   <body ng-app="starter">
