--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,6 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="lib/ionic-filter-bar/dist/ionic.filter.bar.min.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -26,13 +25,19 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
 
-    <!-- Libraries -->
-    <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.min.js"></script>
-    <script src="lib/ti-segmented-control/dist/ti-segmented-control.js"></script>
-    <link rel="stylesheet" href="lib/angular-material/angular-material.min.css">
-    <script src="lib/angular-material/angular-material.min.js"></script>
-    <script src="lib/angular-animate/angular-animate.min.js"></script>
-    <script src="lib/angular-aria/angular-aria.min.js"></script>
+    <!-- Angular Material Library -->
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+
+    <!-- FilterBar (Searchbar) Library -->
+    <link href="https://cdn.rawgit.com/djett41/ionic-filter-bar/master/dist/ionic.filter.bar.min.css" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/djett41/ionic-filter-bar/master/dist/ionic.filter.bar.min.js"></script>
+
+    <!-- Segments Library -->
+    <script src="https://cdn.rawgit.com/tinga-dev/ti-ionic-segmented-control/master/dist/ti-segmented-control.js"></script>
 
     <!-- Geojson Files -->
     <script type="application/json" src="resources/otway_ski_trails.geojson"></script>
