--- a/www/index.html
+++ b/www/index.html
@@ -26,18 +26,18 @@
     <script src="js/services.js"></script>
 
     <!-- Angular Material Library -->
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
 
     <!-- FilterBar (Searchbar) Library -->
     <link href="https://cdn.rawgit.com/djett41/ionic-filter-bar/master/dist/ionic.filter.bar.min.css" rel="stylesheet">
     <script src="https://cdn.rawgit.com/djett41/ionic-filter-bar/master/dist/ionic.filter.bar.min.js"></script>
 
     <!-- Segments Library -->
-    <script src="lib/ti-segmented-control/dist/ti-segmented-control.js"></script>
+    <script src="https://cdn.rawgit.com/tinga-dev/ti-ionic-segmented-control/master/dist/ti-segmented-control.js"></script>
 
     <!-- Geojson Files -->
     <script type="application/json" src="resources/otway_ski_trails.geojson"></script>
