base layer switching on details page

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
     <script src="cordova.js"></script>
 
     <!-- CartoDB Scripts -->
-    <script src="lib/cartodb.js"></script>
+    <script src="lib/cartodb.js/cartodb.js"></script>
 
     <!-- your app's js -->
 		<!-- inject:css -->
