--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/cartodb.js/themes/css/cartodb.css" />
+		<link rel="stylesheet" href="css/ol.css" />
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -21,6 +22,7 @@
 
     <!-- CartoDB Scripts -->
     <script src="lib/cartodb.js/cartodb.js"></script>
+		<script src="lib/ol.js"></script>
 
     <!-- your app's js -->
 		<!-- inject:css -->
