--- a/www/index.html
+++ b/www/index.html
@@ -17,15 +17,29 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 		
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
     <!-- CartoDB Scripts -->
     <script src="lib/cartodb.js/cartodb.js"></script>
 
+    <!-- Firebase Scripts -->
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/angularfire/dist/angularfire.min.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyAxT3s6YW3XoX6XcG0rqxf7b2nWh05uV-Q",
+        authDomain: "getlost-2385c.firebaseapp.com",
+        databaseURL: "https://getlost-2385c.firebaseio.com",
+        storageBucket: "getlost-2385c.appspot.com"
+      };
+      firebase.initializeApp(config);
+    </script>
+
     <!-- your app's js -->
 		<!-- inject:css -->
 		<!-- endinject -->
-		
     <script src="js/global.js"></script>
 		<script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
