--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 
     <!-- CartoDB Scripts -->
     <script src="lib/cartodb.js/cartodb.js"></script>
-		<script src="lib/ol.js"></script>
+		<script src="lib/ol3/ol.js"></script>
 
     <!-- your app's js -->
 		<!-- inject:css -->
